--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,3 +33,23 @@ a, a:hover, a:focus, a:visited
 {
   opacity: 0
 }
+
+
+
+
+/*浮动*/
+.fl{float: left;}
+.fr{float: right;}
+/*清除浮动*/
+.clearfix:after{
+　　　　　　content:"";
+　　　　　　height:0;
+　　　　　　line-height:0;
+　　　　　　display:block;
+　　　　　　visibility:hidden;
+　　　　　　clear:both;
+}
+
+.clearfix{
+　　　　　　zoom:1;
+}
